--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.5.10",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/merienda": "^5.0.12",
+    "@fontsource/roboto": "^5.0.12",
     "astro": "^4.6.3",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
